--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://matthewgoodyear.com/"
 languageCode = "en-us"
 title = "My New Hugo Site"
-relativeurls = true
+relativeURLs = true
