Remove relative url config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,3 @@
 baseURL = "https://matthewgoodyear.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
-relativeURLs = true
+title = "Matthew Goodyear | Branding & Identity"
