--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 baseURL = "https://www.matthewgoodyear.com/"
 languageCode = "en-us"
-title = "Matthew Goodyear | Branding & Identity"
+title = "Goodyear — Logo & Brand Identity"
