--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
 baseURL = "https://www.matthewgoodyear.com/"
 languageCode = "en-us"
 title = "Goodyear — Logo & Brand Identity"
+sectionPagesMenu = "main"
