--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://www.matthewgoodyear.com/"
 languageCode = "en-us"
-title = "Goodyear — Logo & Brand Identity"
+title = "Goodyear"
 sectionPagesMenu = "main"
